# primer_open_cascade

./: .gitignore  README.md
docs/: open_cascade_installation.md  open_cascade_minimal_working_example.md  open_cascade_minimal_working_example_explanation.md  open_cascade_minimum_working_example.md  open_cascade_minimum_working_example_explanation.md
open_cascade_demos/demo_bezier_curve/: CMakeLists.txt  main.cpp
open_cascade_demos/demo_bezier_surface/: CMakeLists.txt  main.cpp
open_cascade_demos/demo_bezier_surface_rational/: CMakeLists.txt  main.cpp
open_cascade_demos/demo_bspline_curve/: CMakeLists.txt  main.cpp
open_cascade_demos/demo_bspline_curve_extended/: CMakeLists.txt  main.cpp
open_cascade_demos/demo_circle/: CMakeLists.txt  main.cpp
open_cascade_demos/demo_circle/output/: circle.step
open_cascade_demos/demo_coons_surface_2boundaries/: CMakeLists.txt  main.cpp
open_cascade_demos/demo_coons_surface_3boundaries/: CMakeLists.txt  main.cpp
open_cascade_demos/demo_coons_surface_4boundaries/: CMakeLists.txt  main.cpp
open_cascade_demos/demo_evolution_law/: CMakeLists.txt  main.cpp  plot_bspline.py
open_cascade_demos/demo_nurbs_surface/: CMakeLists.txt  main.cpp
open_cascade_demos/demo_perforated_disk/: CMakeLists.txt  main.cpp
open_cascade_demos/demo_ruled_surface/: CMakeLists.txt  main.cpp
open_cascade_demos/demo_square/: CMakeLists.txt  main.cpp
open_cascade_demos/open_cascade_minimal_working_example/: CMakeLists.txt  main.cpp
open_cascade_demos/open_cascade_minimum_working_example/: CMakeLists.txt  main.cpp
(+14 files in other folders)
